# Microgrid

./: .replit  README.md  control_logic.py  data_simulator.py  grid_dataset.py  lstm_model.py  main.py  models.py  pyproject.toml
static/js/: dashboard.js
templates/: index.html
